--- a/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/res/values/strings.xml
+++ b/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="new_task_placeholder_title">Princaesas et lindezasus und amoriferus</string>
     <string name="more_action_edit">Editar</string>
     <string name="more_action_delete">Excluir</string>
+
+    <string name="label_you_dont_have_tasks">Você não possui tarefas</string>
+
 </resources>
